--- a/env.yml
+++ b/env.yml
@@ -7,4 +7,6 @@ dependencies:
   - pandas
   - scikit-learn
   - scikit-survival
+  - nibabel
+  - scikit-image
 prefix: /Users/yqeen/anaconda3/envs/ml-env
