environment of conda

--- a/env.yml
+++ b/env.yml
@@ -5,8 +5,14 @@ channels:
 dependencies:
   - python=3.9
   - pandas
+  - numpy
   - scikit-learn
-  - scikit-survival
-  - nibabel
+  - scipy
+  - matplotlib
+  - seaborn
+  - tqdm
+  - jupyter
+  - joblib
+  - pydicom
+  - pillow
   - scikit-image
-
